--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript{
     }
 
     dependencies{
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.1.0'
     }
 }
 
@@ -14,7 +14,7 @@ apply plugin: "idea"
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '21.1.2'
+    buildToolsVersion '23.0.3'
     lintOptions{
         abortOnError false
     }
@@ -32,13 +32,14 @@ android {
 }
 
 repositories{
+    mavenCentral()
     jcenter()
 
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:23.0.+"
-    compile 'com.android.support:design:23.0.1'
+    compile "com.android.support:appcompat-v7:23.4.0"
+    compile 'com.android.support:design:23.4.0'
 
 
 }
